--- a/html/index10.html
+++ b/html/index10.html
@@ -21,7 +21,7 @@
     <div class="card borderRa">
         <div class="number">
             009
-            <a href="../index..html">
+            <a href="../index.html">
             <img class="imagen1"
             src="https://i.pinimg.com/originals/d4/3d/26/d43d26c22113c5da67679bf729b63a50.png"
             alt="">
