--- a/html/index11.html
+++ b/html/index11.html
@@ -22,7 +22,7 @@
     <div class="card borderRa">
         <div class="number">
             010
-            <a href="../index..html">
+            <a href="../index.html">
             <img class="imagen1"
             src="https://www.bmw.com.co/content/dam/bmw/common/all-models/i-series/i4/navigation/bmw-i4-mini-landingpage-modelfinder.png"
             alt="">
