--- a/html/index12.html
+++ b/html/index12.html
@@ -20,7 +20,7 @@
     <div class="card borderRa">
         <div class="number">
             011
-            <a href="../index..html">
+            <a href="../index.html">
             <img class="imagen1"
             src="https://mclaren.scene7.com/is/image/mclaren/720S_Coupe:crop-2x1?fmt=png-alpha&wid=1920&hei=960"
             alt="">
