--- a/html/index13.html
+++ b/html/index13.html
@@ -20,7 +20,7 @@
     <div class="card borderRa">
         <div class="number">
             012
-            <a href="../index..html">
+            <a href="../index.html">
             <img class="imagen1"
             src="https://www.buyatoyota.com/assets/img/vehicle-info/Supra/2024/hero-image.png"
             alt="">
