--- a/html/index2.html
+++ b/html/index2.html
@@ -22,7 +22,7 @@
     <div class="card borderRa">
         <div class="number">
             001
-           <a href="../html/index..html">
+           <a href="../index.html">
             <img class="imagen1"
             src="https://www.chevrolet.com/content/dam/chevrolet/na/us/english/index/vehicles/2024/performance/camaro/design/v2/2024-camaro-collector-ed-2v2.png?imwidth=960"
             alt="">
