--- a/html/index3.html
+++ b/html/index3.html
@@ -20,7 +20,7 @@
     <div class="card borderRa">
         <div class="number">
             002
-            <a href="../index..html">
+            <a href="../index.html">
                 <img class="imagen1"
                 src="https://pngimg.com/d/lamborghini_PNG102913.png"
                 alt="">
