--- a/html/index4.html
+++ b/html/index4.html
@@ -21,7 +21,7 @@
     <div class="card borderRa">
         <div class="number">
             003
-            <a href="../index..html">
+            <a href="../index.html">
             <img class="imagen1"
             src="https://i.pinimg.com/originals/a1/0e/19/a10e19c0354de63803091dedd6dba0ca.png"
             alt="">
