--- a/html/index5.html
+++ b/html/index5.html
@@ -20,7 +20,7 @@
     <div class="card borderRa">
         <div class="number">
             004
-            <a href="../index..html">
+            <a href="../index.html">
             <img class="imagen1"
             src="https://purepng.com/public/uploads/large/purepng.com-audi-r8audicars-961524670148fabn4.png"
             alt="">
