--- a/html/index6.html
+++ b/html/index6.html
@@ -21,7 +21,7 @@
     <div class="card borderRa">
         <div class="number">
             006
-            <a href="../index..html">
+            <a href="../index.html">
             <img class="imagen1"
             src="https://maseratiecuador.com/img/img_models/MC20-cielo.png"
             alt="">
