--- a/html/index8.html
+++ b/html/index8.html
@@ -19,7 +19,7 @@
     <div class="card borderRa">
         <div class="number">
             007
-            <a href="../index..html">
+            <a href="../index.html">
             <img class="imagen1"
             src="https://i.pinimg.com/originals/ac/e6/3b/ace63b2f6ccd29c7e567e070089fcd5b.png"
             alt="">
